tests/type_errors/wrong_arity.sy
def main
: Int -> Int
: a = f ' a

def f
: Int -> Int -> Int
: a b = a + b

-- TODO: Not sure I like the extra lines at the end, maybe shrink the spans whitespace?

--+ expected stdout: function: 0x55556da15ae0

